[gd_scene load_steps=3 format=3 uid="uid://1t3nrhrbihqp"]

[ext_resource type="Script" uid="uid://clebpgc5mwm6g" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="AudioStream" uid="uid://2bmfug3roevv" path="res://assets/space invaders click sound.wav" id="2_myx47"]

[node name="PauseMenu" type="Node2D"]
z_index = 5
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 0.34117648)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -120.5
offset_right = 87.0
offset_bottom = -75.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 116.5
offset_top = -22.5
offset_right = 171.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YourScoreLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -22.5
offset_right = -105.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Your Score:"

[node name="HighscoreLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 116.5
offset_top = 41.5
offset_right = 171.5
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YourHighscoreLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 41.5
offset_right = -36.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Your Highscore:"

[node name="ResumeButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 120.5
offset_right = 22.0
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_myx47")

[connection signal="pressed" from="ColorRect/ResumeButton" to="." method="_on_resume_button_pressed"]
